# NullGate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gate0.cpp  ntapi.hpp  syscalls.S  syscalls.cpp  syscalls.hpp
include/nullgate/: hashing.hpp  ntdll.hpp  obfuscation.hpp  syscalls.hpp
include/sample/: ntapi.hpp
src/hasher/: CMakeLists.txt  hasher.cpp
src/nullgate/: hashing.cpp  ntdll.cpp  obfuscation.cpp  syscalls.cpp  syscalls_masm.asm
src/sample/: sample.cpp
